--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
-pandas==1.0.5
+tqdm==4.39.0
+transformers.egg==info
+dataclasses==0.7
+datasets==1.1.3
+pandas==0.25.1
+torch==1.7.0
+numpy==1.17.1
+wikipedia==1.4.0
+spacy==2.3.2
+streamlit==0.71.0
 beautifulsoup4==4.9.3
+transformers==4.4.2
